<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <!--toolbar-->
    <include layout="@layout/tool_bar"/>

    <!--内容部分-->
    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">
        <EditText
            android:id="@+id/et_username"
            style="@style/EditText"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/et_password"
            style="@style/EditText"
            android:hint="@string/enter_password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/bt_login"
            android:background="@drawable/selector_color_primary"
            android:textColor="@drawable/selector_text_color_primary_reverse"
            android:text="@string/login"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"/>

        <!--style="?android:attr/borderlessButtonStyle" 去掉Button灰底-->
        <Button
            android:id="@+id/bt_forget_password"
            android:background="@color/transparent"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/light_grey"
            android:text="@string/forget_password"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>