...
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/dl"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!--这部分是主界面内容-->
    <include layout="@layout/app_bar_home"/>

...
