...
        <!--占位控件-->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/bt_login_or_register"
            android:textColor="@drawable/selector_text_color_primary_reverse"
            android:background="@drawable/selector_color_primary"
            android:text="@string/login_or_register"
            android:layout_width="@dimen/button_width_large"
            android:layout_height="@dimen/button_height"/>
        <!--占位控件-->
...
